--- a/05-hero.html
+++ b/05-hero.html
@@ -26,24 +26,51 @@
         width: 1200px;
       }
       header {
-        background-color: orangered;
+        /* background-color: orangered; */
         height: 100vh;
+        position: relative;
+        background-image: linear-gradient(
+            rgba(34, 34, 34, 0.6),
+            rgba(34, 34, 34, 0.6)
+          ),
+          url(hero.jpg);
+        background-size: cover;
       }
       nav {
         font-size: 20px;
         font-weight: 700;
         display: flex;
         justify-content: space-between;
-        background-color: green;
+        color: white;
+        padding-top: 32px;
+
+        /* background-image: linear-gradient(to right, red, blue); */
+
+        /* background-color: green; */
+      }
+      .header-container {
+        width: 1200px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        /* background-color: violet; */
+      }
+      .header-container-inner {
+        width: 50%;
+        /* background-color: yellow; */
       }
       h1 {
         font-size: 52px;
         margin-bottom: 32px;
+        line-height: 1.05;
+        color: white;
       }
       p {
         font-size: 20px;
         line-height: 1.5;
         margin-bottom: 48px;
+        color: white;
       }
       .btn:link,
       .btn:visited {
@@ -72,13 +99,15 @@
         <div>LOGO</div>
         <div>NAVIGATION</div>
       </nav>
-      <div class="container">
-        <h1>A healthy meal delivered to your door every single day</h1>
-        <p>
-          The smart 365-days-per-year food subscription that will make you eat
-          healthy again Tailored to your personal taste and nutritional needs
-        </p>
-        <a href="#" class="btn">Start eating well</a>
+      <div class="header-container">
+        <div class="header-container-inner">
+          <h1>A healthy meal delivered to your door every single day</h1>
+          <p>
+            The smart 365-days-per-year food subscription that will make you eat
+            healthy again Tailored to your personal taste and nutritional needs
+          </p>
+          <a href="#" class="btn">Start eating well</a>
+        </div>
       </div>
     </header>
     <section>
